//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id Int [pk, increment]
  username String [unique, not null]
  password String [not null]
  firstName String
  lastName String
  role Role [not null, default: 'USER']
  archived Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  tokens tokens [not null]
  companies companies [not null]
}

Table tokens {
  refreshToken String [pk]
  userId Int [not null]
  expiredAt DateTime [not null]
  user users [not null]
}

Table companies {
  id Int [pk, increment]
  name String [unique, not null]
  about String
  logoUrl String
  verified Boolean [not null, default: false]
  archived Boolean [not null, default: false]
  userId Int [not null]
  rating Float [not null, default: 0]
  review Int [not null, default: 0]
  categoryId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
  category categories [not null]
  promotions promotions [not null]
  stores stores [not null]
  countries countries [not null]
}

Table banks {
  id Int [pk, increment]
  name String [unique, not null]
  logoUrl String
  archived Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  promotions promotions [not null]
}

Table promotions {
  id Int [pk, increment]
  type PromotionType [not null]
  size Int [not null]
  message String
  startAt DateTime [not null]
  endAt DateTime [not null]
  archived Boolean [not null, default: false]
  companyId Int [not null]
  bankId Int
  promoCode String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  company companies [not null]
  bank banks
  stores stores [not null]
}

Table stores {
  id Int [pk, increment]
  companyId Int [not null]
  countryId Int [not null]
  cityId Int [not null]
  address String [not null]
  latitude String [not null]
  longitude String [not null]
  openAt String [not null]
  closeAt String [not null]
  archived Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  company companies [not null]
  promotions promotions [not null]
  country countries [not null]
  city cities [not null]
}

Table categories {
  id Int [pk, increment]
  value String [not null]
  companies companies [not null]
}

Table countries {
  id Int [pk, increment]
  value String [not null]
  companies companies [not null]
  store stores [not null]
}

Table cities {
  id Int [pk, increment]
  countryId Int [not null]
  value String [not null]
  store stores [not null]
}

Table CompanyToCountry {
  countriesId Int [ref: > countries.id]
  companiesId Int [ref: > companies.id]
}

Table PromotionToStore {
  storesId Int [ref: > stores.id]
  promotionsId Int [ref: > promotions.id]
}

Enum Role {
  USER
  ADMIN
  SUPER_ADMIN
}

Enum PromotionType {
  DISCOUNT
  CASHBACK
  PROMO_CODE
}

Ref: tokens.userId > users.id [delete: Cascade]

Ref: companies.userId > users.id [delete: Cascade]

Ref: companies.categoryId > categories.id

Ref: promotions.companyId > companies.id [delete: Cascade]

Ref: promotions.bankId > banks.id [delete: Cascade]

Ref: stores.companyId > companies.id [delete: Cascade]

Ref: stores.countryId > countries.id

Ref: stores.cityId > cities.id